newreps/style.css
body {
  font-family: 'Fira Sans', sans-serif;
  background-color: #eeeeee;
}

h1 {
  font-size: 4em;
  display: inline-block;
  font-family: 'Arvo', serif;
  background-color: #000;
  color: #FFF;
  padding: 10px;
}

p {
  padding-top: 2em;
  margin: 0 auto;
  text-align: center;
  width: 50%;
}

header {
  display: block;
}

section {
  margin-bottom: 3em;
}

a, a:visited {
  color: #000;
}

.reps-logo {
  display: block;
  margin: 0 auto;
  width: 30%;
  padding-top: 3em;
}

.content {
  padding-left: 50px;
  padding-right: 50px;
  margin-top: 50px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.rep-card {
  text-align: left;
  border: 1px solid rgb(204, 204, 204);
  border-bottom: 3px solid #C3212E;
  min-height: 300px;
  max-width: 23%;
  min-width: 23%;
  margin: 20px 10px 25px;
  background-color: #fff;
  color: #000;
}

.rep-card header img {
  width: 100%;
}

.rep-card h2,
.rep-card .item-content {
  padding: 20px 20px 10px 20px;
}

.rep-card h2 {
  font-size: 1.6rem;
}

.rep-card h2 a,
.rep-card h2 a:visited {
  color: inherit;
  text-decoration: none;
  border-bottom: 3px solid #C3212E;
  box-shadow: inset 0 -4px 0 #C3212E;
}

.rep-card aside {
  font-size: 0.9em;
  font-weight: 700;
  text-transform: uppercase;
  line-height: 25px;
  margin-top: 10px;
  padding-right: 20px;
  padding-left: 20px;
}

@media (max-width: 1216px) {
  .rep-card {
    max-width: 31%;
    min-width: 31%;
  }
}

@media (max-width: 1058px) {
  .rep-card {
    max-width: 47%;
    min-width: 47%;
  }
}

@media (max-width: 849px) {
  p {
    width: 97%;
  }

  .rep-card {
    max-width: 97%;
    min-width: 97%;
  }

  .reps-logo {
    width: 90%;
  }
}

@media (max-width: 500px) {
  .rep-card {
    margin: 20px 0 0 0;
  }

  .content {
    padding: 0;
  }

  h1 {
    font-size: 2em;
  }
}

